--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <!--- Basic Page Needs
    ================================================== -->
    <meta charset="utf-8">
-   <title>My Personal Website on Github</title>
+   <title>Amirreza Ghane</title>
    <meta name="description" content="">
    <meta name="author" content="">
 
@@ -60,7 +60,7 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">Amirreza Ghane</h1>
-            <h3><span>Full Stack Developer</span>
+            <h3><span>Dot Net Developer</span>
                <br />
                Let's <a class="smoothscroll" href="#about">start scrolling</a>
                and learn more <a class="smoothscroll" href="#about">about me</a>.
@@ -99,7 +99,7 @@
 
             <p>
                Hello! I'm Amirreza Ghane. I am passionate about Artificial intelligence and Software development.
-               I am a skilled Full Stack Developer and master of Graphic Design tools such as Photoshop.<br />
+               I am a skilled Microsoft .Net Developer and master of Graphic Design tools such as Photoshop.<br />
             </p>
 
             <div class="row">
@@ -175,8 +175,8 @@
 
                <div class="twelve columns">
 
-                  <h3>Front-end Developer</h3>
-                  <p class="info">Senior UI Designer <span>&bull;</span> <em class="date">September 2018 - Present</em>
+                  <h3>C# Developer</h3>
+                  <p class="info">Windows Forms <span>&bull;</span> <em class="date">September 2018 - Present</em>
                   </p>
 
                </div>
@@ -187,8 +187,8 @@
 
                <div class="twelve columns">
 
-                  <h3>Back-end Developer</h3>
-                  <p class="info">Junior Asp.NetCore-WebApi Developer <span>&bull;</span> <em class="date">March 2020 -
+                  <h3>Web Application Developer</h3>
+                  <p class="info">Asp.NetCore RazorPages <span>&bull;</span> <em class="date">March 2020 -
                         Present</em></p>
 
 
@@ -215,8 +215,8 @@
 
                <ul class="skills">
                   <li><span class="bar-expand csharp"></span><em>C#</em></li>
-                  <li><span class="bar-expand aspnetcore"></span><em>ASP.NET Core</em></li>
-                  <li><span class="bar-expand aspnetmvc"></span><em>ASP.NET MVC</em></li>
+                  <li><span class="bar-expand aspnetcore"></span><em>ASP.NET Core Framework</em></li>
+                  <!--<li><span class="bar-expand aspnetmvc"></span><em>ASP.NET MVC</em></li> -->
                   <li><span class="bar-expand windowsforms"></span><em>Windows Forms</em></li>
                   <li><span class="bar-expand html5"></span><em>HTML5</em></li>
                   <li><span class="bar-expand css"></span><em>CSS3</em></li>
@@ -232,6 +232,136 @@
       </div> <!-- End skills -->
 
    </section> <!-- Resume Section End-->
+
+   <!-- Portfolio Section
+   ================================================== -->
+   <section id="portfolio">
+
+      <div class="row">
+
+         <div class="twelve columns collapsed">
+
+            <h1>Check Out Some Of My Certifications.</h1>
+
+            <!-- portfolio-wrapper -->
+            <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf">
+
+               <div class="columns portfolio-item">
+                  <div class="item-wrap">
+
+                     <a href="#modal-01" title="">
+                        <img alt="" src="images/portfolio/razorpages.png">
+                        <div class="overlay">
+                           <div class="portfolio-item-meta">
+                              <h5>Asp.Net Core Razor pages</h5>
+                              <p>Toplearn</p>
+                           </div>
+                        </div>
+                        <div class="link-icon"><i class="icon-plus"></i></div>
+                     </a>
+
+                  </div>
+               </div> <!-- item end -->
+
+               <div class="columns portfolio-item">
+                  <div class="item-wrap">
+
+                     <a href="#modal-02" title="">
+                        <img alt="" src="images/portfolio/webapi.png">
+                        <div class="overlay">
+                           <div class="portfolio-item-meta">
+                              <h5>Asp.Net Core Web Api</h5>
+                              <p>Toplearn</p>
+                           </div>
+                        </div>
+                        <div class="link-icon"><i class="icon-plus"></i></div>
+                     </a>
+
+                  </div>
+               </div> <!-- item end -->
+
+               <div class="columns portfolio-item">
+                  <div class="item-wrap">
+
+                     <a href="#modal-03" title="">
+                        <img alt="" src="images/portfolio/advance.png">
+                        <div class="overlay">
+                           <div class="portfolio-item-meta">
+                              <h5>Asp.Net Core Advance</h5>
+                              <p>Toplearn</p>
+                           </div>
+                        </div>
+                        <div class="link-icon"><i class="icon-plus"></i></div>
+                     </a>
+
+                  </div>
+               </div> <!-- item end -->
+
+            </div> <!-- portfolio-wrapper end -->
+
+         </div> <!-- twelve columns end -->
+
+
+         <!-- Modal Popup
+	      --------------------------------------------------------------- -->
+
+         <div id="modal-01" class="popup-modal mfp-hide">
+
+            <img class="scale-with-grid" src="images/portfolio/razorpages_m.png" alt="" />
+
+            <!--<div class="description-box">
+			      <h4>Coffee Cup</h4>
+			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+               <span class="categories"><i class="fa fa-tag"></i>Branding, Webdesign</span>
+		      </div>-->
+
+            <div class="link-box">
+               <!--   <a href="http://www.behance.net" target="_blank">Details</a> -->
+               <a class="popup-modal-dismiss">Close</a>
+            </div>
+
+         </div><!-- modal-01 End -->
+
+         <div id="modal-02" class="popup-modal mfp-hide">
+
+            <img class="scale-with-grid" src="images/portfolio/webapi_m.png" alt="" />
+
+            <!--<div class="description-box">
+			      <h4>Console</h4>
+			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+               <span class="categories"><i class="fa fa-tag"></i>Branding, Web Development</span>
+		      </div>-->
+
+            <div class="link-box">
+               <!--  <a href="http://www.behance.net" target="_blank">Details</a> -->
+               <a class="popup-modal-dismiss">Close</a>
+            </div>
+
+         </div><!-- modal-02 End -->
+
+         <div id="modal-03" class="popup-modal mfp-hide">
+
+            <img class="scale-with-grid" src="images/portfolio/advance_m.png" alt="" />
+
+            <!--<div class="description-box">
+			      <h4>Judah</h4>
+			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+               <span class="categories"><i class="fa fa-tag"></i>Branding</span>
+		      </div>-->
+
+            <div class="link-box">
+               <!-- <a href="http://www.behance.net" target="_blank">Details</a> -->
+               <a class="popup-modal-dismiss">Close</a>
+            </div>
+
+         </div><!-- modal-03 End -->
+
+
+
+
+      </div> <!-- row End -->
+
+   </section> <!-- Portfolio Section End-->
 
 
 
